progress register : menambah beberapa remote validasi. dan event insert db

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\htdocs
 index.file=
 run.as=LOCAL
-url=http://localhost/
+url=http://localhost/fargasa/
